errors2.txt
    Checking only-bt-scan v0.1.0 (C:\projekty\only-bt-scan)
error[E0597]: `conn` does not live long enough
    --> src\web_server.rs:2070:11
     |
2052 |     let conn = match rusqlite::Connection::open("bluetooth_scan.db") {
     |         ---- binding `conn` declared here
...
2070 |     match conn.prepare(query) {
     |           ^^^^---------------
     |           |
     |           borrowed value does not live long enough
     |           a temporary with access to the borrow is created here ...
...
2132 | }
     | -
     | |
     | `conn` dropped here while still borrowed
     | ... and the borrow might be used here, when that temporary is dropped and runs the destructor for type `Result<Statement<'_>, rusqlite::Error>`
     |
     = note: the temporary is part of an expression at the end of a block;
             consider forcing this temporary to be dropped sooner, before the block's local variables are dropped
help: for example, you could save the expression's value in a new local variable `x` and then make `x` be the expression at the end of the block
     |
2070 ~     let x = match conn.prepare(query) {
2071 |         Ok(mut stmt) => {
 ...
2130 |         })),
2131 ~     }; x
     |

For more information about this error, try `rustc --explain E0597`.
error: could not compile `only-bt-scan` (lib) due to 1 previous error
